manifests/ext-auth-securitypolicy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ext-auth-poc
spec:
  gatewayClassName: teg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: custom-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ext-auth-poc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ext-auth-poc
  rules:
    - matches:
        - headers:
            - type: Exact
              name: x-current-user
              value: user1
      backendRefs:
        - group: ""
          kind: Service
          name: backend-app-v1
          port: 8080
    - matches:
        - headers:
            - type: Exact
              name: x-current-user
              value: user2
      backendRefs:
        - group: ""
          kind: Service
          name: backend-app-v2
          port: 8080
    - backendRefs:
        - group: ""
          kind: Service
          name: backend-app
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ext-auth-poc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ext-auth-poc
  extAuth:
    recomputeRoute: true
    http:
      headersToBackend: ["x-current-user"]
      backendRefs:
        - name: ext-auth-svc
          kind: Backend
          group: gateway.envoyproxy.io
